see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2007-11-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------

* mged 'tol' command now accepts multiple tolerances - Sean Morrison
* TCL and TK updated to 8.5b1. itcl/itk to dev 3.4. - Erik Greenwald
* fixed non-normalized vector bugs with ARBN objects - John Anderson
* pix-png warns if PNG is smaller than the PIX input - Sean Morrison
* new tgf-g INTAVAL importer - TNO PML, IABG mbH
* removed longjmp warning message from applications - Sean Morrison
* upgraded bundled incrTcl to version 3.3 - Erik Greenwald
* fixed bug with -g/-G cell size options to rt - John Anderson
* 'tree' command without args now shows e'd objects - Sean Morrison
* new pix-fb -p option to pause before exiting - Karel Kulhavy
* fixed mged 'B' command behavior with -A and no args - John Anderson
* updated bundled libpng to version 1.2.21 - Erik Greenwald
* removed raytrace image continuation code - Erik Greenwald
* new mged 'clone' command for performing deep copies of objects
	- Adam Ross, Sean Morrison, Erik Greenwald
* new mged 'tracker' object routing command - Sean Morrison
* fixed crash in mged ls -A attribute listing command - Sean Morrison
* fixed dbconcat of empty combinations, crash in mged - John Anderson


----------------------------------------------------------------------
--- 2007-10-24  Release 7.10.4                                     ---
----------------------------------------------------------------------

A major productivity change introduced in this release is
tab-completion in mged.  John Anderson's addition of tab-completion to
mged allows modelers to have command and object names automatically
completed when they press the tab key when operating on the mged